@@ -36,6 +36,7 @@
       --add-opens com.azure.search.documents/com.azure.search.documents.implementation.models=ALL-UNNAMED
       --add-opens com.azure.search.documents/com.azure.search.documents.test.environment.models=com.fasterxml.jackson.databind
       --add-opens com.azure.search.documents/com.azure.search.documents.test.environment.models=ALL-UNNAMED
+      --add-reads com.azure.search.documents=com.azure.core.serializer.json.jackson
       --add-reads com.azure.core=ALL-UNNAMED
       --add-reads com.azure.core.test=ALL-UNNAMED
       --add-reads com.azure.core.http.netty=ALL-UNNAMED
@@ -105,7 +106,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.19</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.21</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
